# pogzops

./: .gitignore  README.md  pyproject.toml
pogzops/: app.py  cli.py  copy-command.yaml  download-command.yaml  example-command.yaml  run.py
pogzops/conf/: conf.py
pogzops/examples/: move_srcv_questionnaires.py  save_lunatic_questionnaires.py
pogzops/input/: read_opz.py  read_opz_test.py
pogzops/local/: opz.py
pogzops/models/: envs.py  operations.py  operations_test.py  questionnaire.py  status.py  test_test.py  types.py
pogzops/output/: reporting.py  save.py
pogzops/remote/: create.py  delete.py  get.py  opz.py  update.py
ui/: README.md  pyproject.toml  rxconfig.py
ui/.web/: package-lock.json  reflex.json
ui/.web/pages/: environments.js  index.js
ui/ui/: ui.py
