[tool.poetry]
name = "pogzops"
version = "0.1.0"
description = "Toolbelt for Pogues"
authors = ["romaintailhurat <romain.tailhurat@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.24.1"
ruff = "^0.1.0"
pyyaml = "^6.0.1"
click = "^8.1.7"

[tool.poetry.scripts]
pgz = "pogzops.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
